--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <header class="header">
                 <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="Логотип Россия">
                 <div class="lang-link">
-                <a class="header__lang-link">Ru</a>
-                <a class="header__lang-link">En</a>
+                <a class="header__lang-link" href="#">Ru</a>
+                <a class="header__lang-link" href="#">En</a>
                 </div>
             </header>
 
