--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <h3 class="intro__title">Чего мы там не видели?</h3>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов <span class="intro__list_number">11</span></li>
-                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></li>
-                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></li>
-                    <li>Природных заповедников <span class="intro__list_number">105</span></li>
-                    <li>Аэропортов <span class="intro__list_number">241</span></li>
+                    <li>Часовых поясов <span class="intro__list-number">11</span></li>
+                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span></li>
+                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span></li>
+                    <li>Природных заповедников <span class="intro__list-number">105</span></li>
+                    <li>Аэропортов <span class="intro__list-number">241</span></li>
                 </ul>
             </section>
             
@@ -58,8 +58,8 @@
                     <h2 class="place__title">Куршская коса</h2>
                     
                     <div class="place__website">
-                        <h5 class="website__url-heading">URL</h5>
-                        <a class="website__link" href="http://park-kosa.ru">http://park-kosa.ru</a>
+                        <h5 class="place__website_url-heading">URL</h5>
+                        <a class="place__website_link" href="http://park-kosa.ru">http://park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса">
                     <div class="place__text">
@@ -70,8 +70,8 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <h5 class="website__url-heading">URL</h5>
-                        <a class="website__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                        <h5 class="place__website_url-heading">URL</h5>
+                        <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="Кольский полуостров">
                     <div class="place__text">
@@ -87,8 +87,8 @@
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <h5 class="website__url-heading">URL</h5>
-                        <a class="website__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                        <h5 class="place__website_url-heading">URL</h5>
+                        <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="Алтай">
                     <div class="place__text">
@@ -104,8 +104,8 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <h5 class="website__url-heading">URL</h5>
-                        <a class="website__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                        <h5 class="place__website_url-heading">URL</h5>
+                        <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div class="place__text">
@@ -122,8 +122,8 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <h5 class="website__url-heading">URL</h5>
-                        <a class="website__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                        <h5 class="place__website_url-heading">URL</h5>
+                        <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="Карелия">
                     <div class="place__text">
