--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <h2 class="place__title">Куршская коса</h2>
                     
                     <div class="place__website">
-                        <h5 class="place__website_url-heading">URL</h5>
-                        <a class="place__website_link" href="http://park-kosa.ru">http://park-kosa.ru</a>
+                        <h5 class="place__website-url-heading">URL</h5>
+                        <a class="place__website-link" href="http://park-kosa.ru">http://park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса">
                     <div class="place__text">
@@ -70,8 +70,8 @@
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <h5 class="place__website_url-heading">URL</h5>
-                        <a class="place__website_link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                        <h5 class="place__website-url-heading">URL</h5>
+                        <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="Кольский полуостров">
                     <div class="place__text">
@@ -87,8 +87,8 @@
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <h5 class="place__website_url-heading">URL</h5>
-                        <a class="place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                        <h5 class="place__website-url-heading">URL</h5>
+                        <a class="place__website-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="Алтай">
                     <div class="place__text">
@@ -104,8 +104,8 @@
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <h5 class="place__website_url-heading">URL</h5>
-                        <a class="place__website_link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                        <h5 class="place__website-url-heading">URL</h5>
+                        <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div class="place__text">
@@ -122,8 +122,8 @@
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <h5 class="place__website_url-heading">URL</h5>
-                        <a class="place__website_link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                        <h5 class="place__website-url-heading">URL</h5>
+                        <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="Карелия">
                     <div class="place__text">
