--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="page">
             <header class="header">
-                <img class="header__logo" src="./sprint-3-images/header-logo.svg" alt="Логотип Россия">
+                <img class="header__logo" src="./images/header-logo.svg" alt="Логотип Россия">
                 <div class="lang-link">
                 <a class="header__lang-link" href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
@@ -21,7 +21,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <h4 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h4>
-                <img class="lead__image" src="./sprint-3-images/lead-polka.jpg" alt="Фото в поезде">
+                <img class="lead__image" src="./images/lead-polka.jpg" alt="Фото в поезде">
                 <p class="lead__caption">ВАША ПОЛКА — ВЕРХНЯЯ</p>
             </section>
 
@@ -39,18 +39,18 @@
             
 
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-train.jpg" alt="Вид из окна поезда">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="Атарва тулси">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-tuman.jpg" alt="Туман">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-sochi.jpg" alt="Сочи">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-arisa.jpg" alt="Ариса">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-baikal.jpg" alt="Байкал">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-elbrus.jpg" alt="Эльбрус">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="Кондратьев">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="Байкал">
-                <img class="photo-grid__item" src="./sprint-3-images/photo-grid-ergaki.jpg" alt="Ергаки">
+                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Вид из окна поезда">
+                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Атарва тулси">
+                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Ариса">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Байкал">
+                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Кондратьев">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Ергаки">
             </section>
 
             <section class="places">
@@ -61,7 +61,7 @@
                         <h5 class="place__website-url-heading">URL</h5>
                         <a class="place__website-link" href="http://park-kosa.ru">http://park-kosa.ru</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса">
+                    <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
                     <div class="place__text">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -73,7 +73,7 @@
                         <h5 class="place__website-url-heading">URL</h5>
                         <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-kolsky.jpg" alt="Кольский полуостров">
+                    <img class="place__image" src="./images/place-kolsky.jpg" alt="Кольский полуостров">
                     <div class="place__text">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
                             тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
@@ -90,7 +90,7 @@
                         <h5 class="place__website-url-heading">URL</h5>
                         <a class="place__website-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-altai.jpg" alt="Алтай">
+                    <img class="place__image" src="./images/place-altai.jpg" alt="Алтай">
                     <div class="place__text">
                         <p class="place__paragraph">
                             Алтай — одно из красивейших мест в России. 
@@ -107,7 +107,7 @@
                         <h5 class="place__website-url-heading">URL</h5>
                         <a class="place__website-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-winter-baikal.jpg" alt="Зимний Байкал">
+                    <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Зимний Байкал">
                     <div class="place__text">
                         <p class="place__paragraph">
                             Всем известен Байкал как крупнейшее озеро 
@@ -125,7 +125,7 @@
                         <h5 class="place__website-url-heading">URL</h5>
                         <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                     </div>
-                    <img class="place__image" src="./sprint-3-images/place-karelia.jpg" alt="Карелия">
+                    <img class="place__image" src="./images/place-karelia.jpg" alt="Карелия">
                     <div class="place__text">
                         <p class="place__paragraph">
                             Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
